2010-05-13  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Added edit button to the grid view

2010-05-12  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Restored v0.6 features + some usability improvements
   Added grid orientation option + fixes for RTL
   Bugfixes
 * swatchbook/__init__.py,swatchbook/codecs/ral_bcs.py,swatchbook/websvc/dtpstudio.py,swatchbook/websvc/icipaints.py:
   Bugfixes
 * swatchbook/websvc/pantone.py,swatchbook/websvc/pantone.py:
   New Pantone plugin based on the X-Ref data

2010-05-05  Olivier Berten  <olivier.berten@gmail.com>

 * everything ;-)
   New internal model and new format (still buggy)

2010-03-23  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Language choice setting

2010-03-06  Olivier Berten  <olivier.berten@gmail.com>

 * translations/pt_BR.po:
   Added Brazilian Portuguese translation (thanks to Farid Abdelnour)

2010-03-04  Olivier Berten  <olivier.berten@gmail.com>

 * locale/,translations/:
   Switch translation to gettext

2010-02-28  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbook/__init__.py,swatchbooker.pyw:
   Added interface for swatch info localization
   Workaround for not using GTK+ style
   First try of downloading swatches from the web
 * New release: SwatchBooker 0.6

2010-01-31  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbook/__init__.py,swatchbooker.pyw:
   Bugfixes (thanks to Максим)

2010-01-28  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Added drag and drop + bugfixes

2010-01-26  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Changed the "selected" look for swatch icons

2010-01-25  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Add support for line breaks in the grid view

2010-01-22  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker_de.ts,swatchbooker_de.qm:
   Added German translation (thanks to Christoph Schäfer)
 * swatchbooker.pro: