@@ -79,6 +79,9 @@ class ccorg(WebSvc):
 	"""ColorCharts.org"""
 	
 	type = 'list'
+
+	about = u'Copyright 2000 - 2007 Colorcharts.org, All Rights Reserved'
+
 	nbLevels = 3
 	url = "http://www.colorcharts.org/ccorg/"
 
@@ -198,6 +201,7 @@ class ccorg(WebSvc):
 		
 		for i in range(len(deck['colours'])):
 			item = Color(swatchbook)
+			item.usage.append('spot')
 			rgb = deck['colours'][i]
 			item.values[('sRGB',False)] = [int(rgb[0:2],16)/0xFF,int(rgb[2:4],16)/0xFF,int(rgb[4:],16)/0xFF]
 			if deck['names'][i] not in swatchbook.swatches:
