@@ -25,6 +25,8 @@ from swatchbook.websvc import *
 class pantone(WebSvc):
 	"""Pantone"""
 
+	about = u'These data come from Pantone\'s <a href="http://www.pantone.com/pages/pantone/color_xref.aspx">X-Ref</a> tool.<br /><br />PANTONE® and other Pantone, Inc. trademarks are the property of Pantone, Inc. © Pantone, Inc. 2010'
+
 	type = 'list'
 	nbLevels = 1
 	url = 'http://www.pantone.com/images/xref/'
@@ -64,6 +66,7 @@ class pantone(WebSvc):
 			if line.strip() > '':
 				line = line.split('"')[1].split(',')
 				item = Color(swatchbook)
+				item.usage.append('spot')
 				id = unicode(line[1])
 				item.info.title = 'PANTONE® '+id
 				item.values[('Lab',False)] = [eval(line[2]),eval(line[3]),eval(line[4])]
