@@ -1,5 +1,10 @@
 2010-05-13  Olivier Berten  <olivier.berten@gmail.com>
 
+ * swatchbooker.pyw,swatchbook/websvc/*:
+   Improving "Open from web" dialog
+
+2010-05-13  Olivier Berten  <olivier.berten@gmail.com>
+
  * swatchbooker.pyw:
    Added edit button to the grid view
 
